...
    <string name="request_transaction_aes">Advanced electronic signature</string>
    <string name="request_transaction_aeseal">Advanced electronic seal</string>
    <string name="request_transaction_aesqc">Advanced electronic signature with a qualified certificate</string>
    <string name="request_transaction_aesealqc">Advanced electronic seal with a qualified certificate</string>
    <string name="request_claim_not_registered_supporting_text">Not registered data</string>
    <string name="request_combination_option_title">Option %1$d of %2$d</string>
    <string name="request_no_data">The requested document is not available in your EUDI Wallet. Please contact the authorised issuer for further information.</string>
    <string name="request_sticky_button_text">Share</string>
    <string name="request_bottom_sheet_warning_title">Warning</string>
    <string name="request_bottom_sheet_warning_subtitle">Choosing not to share certain data may result in failure to issue the requested document.</string>
    <string name="request_blocked_bottom_sheet_title">Presentation blocked</string>
    <string name="request_blocked_bottom_sheet_message">This presentation request has been blocked because the relying party could not be verified by your Wallet.\n\nYour personal information or other data has not been shared with this relying party.</string>
    <string name="request_blocked_bottom_sheet_primary_button_text">Close</string> <!-- upstream alias of generic_close -->
...
